# recu

./: .editorconfig  .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md
.agents/skills/refresh-readme-examples/: SKILL.md  capture.sh
.github/workflows/: ci.yml  publish.yml  release.yml
examples/: recu.csv
npm/recu/: README.md  package.json
npm/recu-darwin-arm64/: README.md  package.json
scripts/: build-npm.mjs  bump-version.mjs
src/: add.rs  cli.rs  config.rs  edit.rs  exchange.rs  expense.rs  ls.rs  main.rs  prompt.rs  rates.rs  rm.rs  storage.rs  store.rs  test_support.rs  treemap.rs  ui.rs
src/commands/: add.rs  calendar.rs  category.rs  config.rs  edit.rs  list.rs  ls.rs  mod.rs  prompt.rs  remove.rs  rename.rs  rm.rs  timeline.rs  treemap.rs  undo.rs  upcoming.rs
src/commands/snapshots/: recu__commands__calendar__tests__calendar.snap  recu__commands__category__tests__enumeration_errors.snap  recu__commands__config__tests__enumeration_errors.snap  recu__commands__list__tests__list.snap  recu__commands__ls__tests__ls.snap  recu__commands__timeline__tests__timeline.snap  recu__commands__timeline__tests__timeline.snap.new  recu__commands__upcoming__tests__upcoming.snap
src/snapshots/: recu__expense__tests__enumeration_errors.snap.new
