[package]
name = "recu"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "warn"
unwrap_used = "warn"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rusty-money = "0.5.0"
inquire = { version = "0.9.4", features = ["date"] }
csv = "1.3"
colored = "2"
terminal_size = "0.3"
ureq = { version = "2", features = ["json"] }
serde_json = "1"
toml = "0.8"
dirs = "5"

[dev-dependencies]
insta = { version = "1", features = ["filters"] }
