[package]
name = "recu"
version = "0.2.1"
edition = "2024"
description = "CLI tool for tracking recurring expenses"
license = "MIT"
repository = "https://github.com/michalczmiel/recu"
homepage = "https://github.com/michalczmiel/recu"
authors = ["Michał Czmiel"]
keywords = ["cli", "expenses", "budget", "finance", "recurring"]
categories = ["command-line-utilities"]
readme = "README.md"
exclude = [".claude/", ".agents/", ".github/", "examples/", "npm/", "Makefile", "clippy.toml", ".editorconfig"]

[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = "s"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "warn"
unwrap_used = "warn"

[dependencies]
clap = { version = "4.6.1", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rusty-money = "0.5.0"
inquire = { version = "0.9.4", features = ["date"] }
csv = "1.3"
colored = "3"
terminal_size = "0.4"
ureq = { version = "3", features = ["json"] }
serde_json = "1"
toml = "1"
dirs = "6"

[dev-dependencies]
insta = { version = "1", features = ["filters"] }
